# algodot

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  Rust Build cheatsheet  build.ps1  config.toml  linux_build.sh
.github/workflows/: Android-CI.yml  Android_CI.yml  Android_test_build.yml  WASM.yml  linux_ci.yml  rust.yml
.github/workflows/composite/rust/: action.yml
abi/: Cargo.toml
abi/src/: abi.rs  lib.rs
algodot/: Cargo.toml  Cross.toml  README.md  android_build.sh  web_assembly_build.sh
algodot/core/: Cargo.toml
algodot/macros/: Cargo.toml
algodot/src/: lib.rs
algodot/src/algod/: mod.rs
algodot/test/: test.ps1
algodot/test/project/: Algod.gd  Scene.tscn  main.gd  project.godot
algodot/test/project/addons/algodot/: Algod.gd  plugin.gd
algodot/test/project/addons/algodot/Documentation/Content/: Algorand.md
algodot/test/project/addons/algodot/Documentation/Content/Tutorials/: Algodot.md
algodot/test/project/addons/algodot/Documentation/Content/Tutorials/Images/: Dialogic_Tab.PNG.import  Empty_Character_Editor.PNG.import  Even_Condition_in_use.PNG.import  Event_Change_Timeline.PNG.import  Event_Character_Join.PNG.import  Event_Character_Leave.PNG.import  Event_Choice.PNG.import  Event_Close_Dialog.PNG.import  Event_Condition.PNG.import  Event_End_Branch.PNG.import  Event_Question.PNG.import  Event_Question_in_use.PNG.import  Event_Set_Theme.PNG.import  Event_Set_Value Options.PNG.import  Event_Set_Value.PNG.import  Event_Text.PNG.import  Event_Wait_Seconds.PNG.import  ExportResources.PNG.import  Import_Selection.PNG.import  Toolbar.PNG.import  YFD_Character_NameColor.PNG.import
algodot/test/project/addons/algodot/Documentation/Scripts/: DocsMarkdownParser.gd  DocsPageViewer.gd  DocsPageViewer.tscn  DocumentationTree.gd  DocumentationViewer.gd  DocumentationViewer.tscn
algodot/test/project/addons/algodot/Documentation/Theme/: DocumentationH2.tres  DocumentationH3.tres  DocumentationH4.tres  DocumentationH5.tres
algodot/test/project/addons/algodot/gdnative/: gdnative_lib.tres
algodot/test/project/addons/algodot/lib/: libalgodot_macros.rlib
algodot/test/sandbox/: test.stxn
algodot/test/sandbox/genesis/: genesis.json
core/: Cargo.toml
core/src/: core.rs
delete/core/src/: lib.rs
delete/test/project/addons/algodot/: icon.png.import
docker/: Dockerfile
godot/: Node.gd  Node.tscn  project.godot
godot/Demo/: Connect.gd  DemoGame.gd  DemoGame.tscn  Fund.gd  Generate.gd  HUD.tscn  InfoButton.gd  InfoButton.tscn  Player.gd  Player.tscn  SetUpShop.gd  Setup.gd  ShopItem.gd  ShopItem.tscn  icon.png.import
godot/Demo/Assets/: #1 - Transparent Icons.png.import  UI_theme.tres  cozy_farm.png.import  noBKG_KnightAttack_strip.png.import  noBKG_KnightDeath_strip.png.import  noBKG_KnightIdle_strip.png.import  noBKG_KnightJumpAndFall_strip.png.import  noBKG_KnightRoll_strip.png.import  noBKG_KnightRun_strip.png.import  noBKG_KnightShield_strip.png.import
godot/Demo/TEAL/: shop.TEAL
godot/Testing/: Node.gd  Node.tscn
godot/addons/algodot/: algorand_logo.png.import  plugin.cfg  plugin.gd
godot/addons/algodot/gdnative/: algod.gdns  gdnative_lib.tres
macros/: Cargo.toml
macros/src/: lib.rs
rust/: .gitignore  Cargo.toml
rust/algodot/: Cargo.toml
rust/algodot/src/: algodot.rs  lib.rs
rust/algodot/src/algod/: mod.rs
rust/core/src/: core.rs
rust/macros/: Cargo.toml
rust/macros/src/: lib.rs
rust/src/: algodot.rs
rust/test/: test.ps1
rust/test/project/: main.gd  project.godot
rust/test/project/addons/editor_test_runner/: plugin.cfg  plugin.gd
rust/test/project/gdnative/: algod.gdns  gdnative_lib.tres
rust/test/sandbox/: config.test
rust/test/sandbox/genesis/: genesis.json
src/: lib.rs
src/algod/: mod.rs
test/: README.md  test.ps1
test/project/: Algod.gd  Scene.tscn  main.gd  project.godot
test/project/.import/: algorand_logo.png-c7b235f3f38fbd26c731f259704a3248.md5  algorand_logo.png-c7b235f3f38fbd26c731f259704a3248.stex  icon.png-487276ed1e3a0c39cad0279d744ee560.stex  icon.png-7520a2638f03f567c38aa16258f505ec.md5
test/project/addons/algodot/: Algod.gd  plugin.cfg  plugin.gd
test/project/addons/algodot/Documentation/Content/: Algorand.md  algorand_logo.png.import
test/project/addons/algodot/Documentation/Scripts/: DocsMarkdownParser.gd  DocsPageViewer.gd  DocsReferenceCollector.gd  (+2 more)
test/project/addons/algodot/gdnative/: async_executor.gdns  gdnative_lib.tres
test/project/addons/algodot/lib/: algodot.dll.exp  algodot.dll.lib  libalgodot_core.rlib
test/project/gdnative/: async_executor.gdns
test/sandbox/: config.test
(+6 files in other folders)
