[package]
name = "algodot"
version = "0.2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "algodot/src/algod/mod.rs"

[dependencies]
algonaut = { git = "https://github.com/manuelmauro/algonaut", rev = "75bce54" }
algodot_abi = { path = "abi" }
algodot_core = { path = "core" }
algodot_macros = { path = "macros" }
gdnative = { version = "0.11", features = ["async"] }

[workspace]

members = [
    "algodot",
    "macros"
]

