[package]
name = "algodot"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.10", features = ["rt"] }
gdnative = { git = "https://github.com/godot-rust/godot-rust.git", features = ["async"], rev = "deb9dbfd413f8ac751a2267be010b2089ff26d50" }
futures = "0.3"
algonaut = { git = "https://github.com/manuelmauro/algonaut", rev = "75bce54" }
algodot_macros = { path = "../macros" }
algodot_core = { path = "../core" }
serde_json = "1.0"
serde = "1.0"