[package]
name = "algodot"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.10", features = ["rt"] }
gdnative = { version = "0.11", features = ["async"] }
futures = "0.3"
algonaut = { git = "https://github.com/manuelmauro/algonaut", rev = "75bce54" }
num-bigint = {git = "https://github.com/rust-num/num-bigint", version = "0.4.3"}
algodot_macros = { path = "../macros" }
algodot_core = { path = "../core" }
algodot_abi = { path = "../abi" }
serde_json = "1.0"
serde = "1.0"
