[package]
name = "algodot_core"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = { version = "0.10", features = ["async"] }
algonaut = { git = "https://github.com/manuelmauro/algonaut", rev = "75bce54" }
derive_more = "0.99.16"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.30"
