[package]
name = "macros"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# algodot = { path = "../algodot" }
# gdnative = { git = "https://github.com/godot-rust/godot-rust.git", features = ["async"], rev = "cc96860" }
# algonaut = "0.3.0"